[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyzlc"
version = "2.1.0"
description="A lightweight ZeroMQ-based framework for high-performance, cross-environment communication across Local Area Networks."
dependencies = [
    "msgpack",
    "pyzmq",
    "colorama",
]
authors = [
  { name = "Xinkai Jiang", email = "jiangxinkai98@gmail.com" },
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyzlc*"]